k8s/crd-order-validate-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "order-policy.app.corley.it"
webhooks:
- name: "order-policy.app.corley.it"
  rules:
  - apiGroups:   ["app.corley.it"]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["orders"]
    scope:       "Namespaced"
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURYVENDQWtXZ0F3SUJBZ0lVRVlWa0dGNkJaR0YvTGZjUHc5UFZzbkRLQXQ0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1BqRUxNQWtHQTFVRUJoTUNTVlF4RGpBTUJnTlZCQWdNQlVsMFlXeDVNUTR3REFZRFZRUUhEQVZVZFhKcApiakVQTUEwR0ExVUVDZ3dHUTI5eWJHVjVNQjRYRFRJd01ESXhOVEl4TURRME1Gb1hEVE13TURJeE1qSXhNRFEwCk1Gb3dQakVMTUFrR0ExVUVCaE1DU1ZReERqQU1CZ05WQkFnTUJVbDBZV3g1TVE0d0RBWURWUVFIREFWVWRYSnAKYmpFUE1BMEdBMVVFQ2d3R1EyOXliR1Y1TUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQwpBUUVBdHVabndhO [...]
    service:
      namespace: "kconference"
      name: "orders-validate-service"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 3
